samples/_failures_safe/1761535230_ce7931_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_29d98ec8.c: In function ‘tokenize’:
./samples/SAFE/__tmp_29d98ec8.c:161:13: error: expected declaration or statement at end of input
  161 |             op[len] = '\0';
      |             ^~
./samples/SAFE/__tmp_29d98ec8.c:161:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_29d98ec8.c:161:13: error: expected declaration or statement at end of input
